<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.trigonated.gamecollection.ui.about.AboutViewModel" />

        <variable
            name="version"
            type="String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.GameCollection.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:navigationIcon="@drawable/ic_action_back"
                app:popupTheme="@style/Theme.GameCollection.PopupOverlay"
                app:title="@string/about_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_large"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/app_name_text"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/app_name"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/version_text"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:text="@{version}"
                    android:textAlignment="center"
                    tools:text="1.2.3" />

                <Button
                    android:id="@+id/github_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:drawableLeft="@drawable/ic_action_github"
                    android:drawablePadding="@dimen/margin_normal"
                    android:drawableTint="?colorOnPrimarySurface"
                    android:onClick="@{() -> viewModel.openGitHubPage()}"
                    android:text="@string/about_github"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/rawg_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:backgroundTint="?attr/colorOnSurface"
                    android:drawablePadding="@dimen/margin_normal"
                    android:foregroundTint="?attr/colorPrimary"
                    android:onClick="@{() -> viewModel.openRawgPage()}"
                    android:text="@string/about_rawg"
                    android:textColor="?attr/colorSurface"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>
        </ScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>